<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#757575"
    tools:context=".ui.FragmentFavoritesDetails" >

    <ImageView
        android:id="@+id/favDetailsImageView"
        android:background="#607D8B"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/character_s_image" />

    <TextView
        android:id="@+id/favDetailsName"
        android:textColor="#F57C00"
        android:textStyle="bold"
        android:gravity="center"
        android:hint="@string/characters_app"
        android:background="#607D8B"
        android:textColorHint="#F57C00"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:background="#757575"
            android:text="@string/id"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:background="#757575"
            android:text="@string/status"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:text="@string/species"
            android:background="#757575"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsSpecies"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:background="#757575"
            android:text="@string/gender"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsGender"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:background="#757575"
            android:text="@string/origin"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsOrigin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FFE0B2"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:background="#757575"
            android:text="@string/location"
            android:textColor="#FFE0B2"
            android:textStyle="normal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/favDetailsLocation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColorHint="#FF9800"
            android:hint="@string/characters_app"
            android:padding="8dp"
            android:textStyle="italic"
            android:background="#757575"
            android:textColor="#FF9800"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDeleteFavoriteCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/deleting_button"
        android:backgroundTint="#FFE0B2"
        android:elevation="5dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_delete_forever_24" />

</LinearLayout>